[project]
name = "trackhub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "venv",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E","F","I","UP","B","S"]

ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"