[project]
name = "trackhub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "pytelegrambotapi>=4.32.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
]

[tool.uv.workspace]
members = [
    "venv",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E","F","I","UP","B","S"]

ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
